--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <!-- Favicons-->
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
   <link rel="icon" href="favicon.ico">
-  <title>Services | Josh Software Private Limited</title>
+  <title>Technology Expert Solution Providers in India | Josh Software Private Limited</title>
   <link rel="stylesheet" href="styles/main.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
   <script type="text/javascript" async=""
