Add script provided

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,24 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<script type="text/javascript">
+_linkedin_partner_id = "793651";
+window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+</script>
 
+<script type="text/javascript">
+(function(){
+  var s = document.getElementsByTagName("script")[0];
+  var b = document.createElement("script");
+
+  b.type = "text/javascript";b.async = true;
+  b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+  s.parentNode.insertBefore(b, s);}
+)();
+</script>
+
+<noscript>
+<img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=793651&fmt=gif" />
+</noscript>
 </html>
