remove import main.css in index html file

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       Technology Expert Solution Providers in India | Josh Software Private
       Limited
     </title>
-    <link rel="stylesheet" href="styles/main.min.css" />
+    <!-- <link rel="stylesheet" href="styles/main.min.css" /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700"
       rel="stylesheet"
