fix prefetch fonts

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
       href="apple-touch-icon-precomposed.png"
     />
     <link rel="icon" href="favicon.ico" />
-    <link rel="preload" href="/fonts/josh-icons.ttf?3loxio" as="font">
-    <link rel="preload" href="/fonts/josh-icons.woff?3loxio" as="font">
+    <link rel="prefetch" href="/fonts/josh-icons.ttf?3loxio" as="font">
+    <link rel="prefetch" href="/fonts/josh-icons.woff?3loxio" as="font">
     <title>
       Technology Expert Solution Providers in India | Josh Software Private
       Limited
