--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,8 @@
       Limited
     </title>
     <!-- <link rel="stylesheet" href="styles/main.min.css" /> -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script
       type="text/javascript"
       async=""
